--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body>
-<iframe src="https://nukas.createmybb4.com/" title="Forum"></iframe>
+<body style="margin: 0; padding: 0;">
+<iframe src="https://nukas.createmybb4.com/" style="width: 100%; height: 100%;"></iframe>
 </body>
 </html>
