--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body style="margin: 0; padding: 0;">
-<iframe src="https://nukas.createmybb4.com/" style="width: 100%; height: 100%; border: none; position: absolute"></iframe>
+<iframe src="https://nukasp.createmybb4.com/" style="width: 100%; height: 100%; border: none; position: absolute"></iframe>
 </body>
 </html>
