--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
 <!DOCTYPE html>
-<html>
-<body style="margin: 0; padding: 0;">
-<iframe src="https://nukasp.createmybb4.com/" style="width: 100%; height: 100%; border: none; position: absolute"></iframe>
-</body>
-</html>
+<html><head></head><body style="margin: 0;"><a href="https://nukasp.github.io/"><div style="background-color: black;position: fixed;width: 100%;padding: 15px 20px 20px 20px;box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;z-index: 1;text-align: left;border-bottom: 10px solid #333;"><img style="height: 50px;" src="https://i.ibb.co/0YVhd5v/remove-removebg-preview.png"></div><div style="background-color: black;position: fixed;width: 100%;padding: 15px 20px 20px 20px;box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;z-index: 1;text-align: left;border-bottom: 1px solid #ddd;margin-top: 86px;"></div></a>
+</body></html>
